force-app/main/default/objects/SAP_SF_Field_Data_Map__mdt/SAP_SF_Field_Data_Map__mdt.object-meta.xml
<CustomObject>
    <label>SAP SF Field Data Map</label>
    <pluralLabel>SAP SF Field Data Maps</pluralLabel>
</CustomObject>