force-app/main/default/objects/SAP_SF_Field_Data_Map__mdt/fields/SAP_Value__c.field-meta.xml
<CustomField>
    <fullName>SAP_Value__c</fullName>
    <label>SAP Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>